\name{NEWS}
\title{News for Package 'CHNOSZ'}
\encoding{UTF-8}

% macros
\newcommand{\H2O}{\ifelse{latex}{\eqn{\mathrm{H_{2}O}}}{\ifelse{html}{\out{H<sub>2</sub>O}}{H2O}}}

\section{Changes in CHNOSZ version 1.3.6-34 (2020-07-15)}{

  \subsection{MAJOR CHANGES}{
    \itemize{

      \item The naming convention for methane has changed. The name
      \strong{methane} now applies exclusively to the gas; the formula
      \strong{CH4} without a state continues to represent the aqueous species.
      This behavior is consistent with inorganic gases but differs from most
      organic substances, where the English name refers to the aqueous species.
      This change was made because in the past there was no way to use
      \code{info()} or \code{subcrt()} with a single character argument to
      identify gaseous methane, which is common in geochemistry.  (Note that
      \code{info("CH4", "gas")} can still be used.) A hack to revert to the old
      behavior, where \strong{methane} refers primarily to the aqueous species,
      is \code{mod.OBIGT(info("CH4"), name = "methane")}.

      \item The all-uppercase acronym \strong{OBIGT} is used everywhere it
      appears in file, function, and object names. In particular, the
      thermodynamic database now sits at \code{thermo()$OBIGT}, and functions
      \code{add.OBIGT()} and \code{mod.OBIGT()} replace the previous
      \code{add.obigt()} and \code{mod.obigt()}.

      \item An \strong{add} argument has been added to \code{species()}. By
      default, loading new species now causes any previous species definition
      to be removed first. Therefore, \code{species(delete = TRUE)} is no
      longer needed to clear the species definition in a series of calculations
      for different species. To restore the previous behavior, where new
      species are added to an existing definiton, set \samp{add = TRUE}.

    }
  }

  \subsection{CHANGES TO OBIGT DATABASE}{
    \itemize{
